--- a/src/css/mainSection.css
+++ b/src/css/mainSection.css
@@ -39,15 +39,15 @@
   text-align: left;
 }
 
-.main-section__list__item__value:nth-of-type(1), .main-section__list__item__value:nth-of-type(2) {
+.main-section__list__item__value:nth-child(1), .main-section__list__item__value:nth-child(2) {
   color: #2957f7;
 }
 
-.main-section__list__item__value:nth-of-type(3), .main-section__list__item__value:nth-of-type(4) {
+.main-section__list__item__value:nth-child(3), .main-section__list__item__value:nth-child(4) {
   color: #aaa;
 }
 
-.main-section__list__item__value:nth-of-type(5), .main-section__list__item__value:nth-of-type(6) {
+.main-section__list__item__value:nth-child(5), .main-section__list__item__value:nth-child(6) {
   color: #f58c93;
 }
 
@@ -64,6 +64,21 @@
 
 .main-section__list__item__value--remove:hover {
   color: red !important;
+}
+
+.main-section__list__item__value--add {
+  position: absolute;
+  right: 0.5%;
+  border: none;
+  background-color: transparent;
+  color: #000 !important;
+  cursor: pointer;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.main-section__list__item__value--add:hover {
+  color: green !important;
 }
 
 .main-section__list__item__value__status {
