--- a/src/scss/mainSection.scss
+++ b/src/scss/mainSection.scss
@@ -25,18 +25,18 @@
           text-align: left;
         }
 
-        &:nth-of-type(1),
-        &:nth-of-type(2) {
+        &:nth-child(1),
+        &:nth-child(2) {
           color: #2957f7;
         }
 
-        &:nth-of-type(3),
-        &:nth-of-type(4) {
+        &:nth-child(3),
+        &:nth-child(4) {
           color: #aaa;
         }
 
-        &:nth-of-type(5),
-        &:nth-of-type(6) {
+        &:nth-child(5),
+        &:nth-child(6) {
           color: #f58c93;
         }
 
@@ -53,6 +53,22 @@
 
           &:hover {
             color: red !important;
+          }
+        }
+
+        &--add {
+          position: absolute;
+          right: 0.5%;
+
+          border: none;
+          background-color: transparent;
+          color: #000 !important;
+
+          cursor: pointer;
+          transition: 0.5s;
+
+          &:hover {
+            color: green !important;
           }
         }
 
