--- a/src/css/mainSection.css
+++ b/src/css/mainSection.css
@@ -19,6 +19,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 0 2rem 0 2rem;
   border-bottom: solid rgba(0, 0, 0, 0.1) 0.05rem;
 }
@@ -28,8 +31,8 @@
       -ms-flex: 1;
           flex: 1;
   text-align: center;
-  font-size: 1rem;
-  line-height: 4.4rem;
+  font-size: 1.1rem;
+  line-height: 8rem;
 }
 
 .main-section__list__item__value:nth-child(1) {
@@ -81,11 +84,82 @@
   color: green !important;
 }
 
+.main-section__list__item__value--new {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main-section__list__item__value--new:nth-child(1) {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.main-section__list__item__value--new:nth-child(2) {
+  height: 50%;
+  padding: 0.5%;
+  border-bottom: green solid 2px;
+}
+
+.main-section__list__item__value--new:nth-child(3) {
+  height: 2rem;
+}
+
+.main-section__list__item__value--image {
+  -ms-flex-item-align: stretch;
+      -ms-grid-row-align: stretch;
+      align-self: stretch;
+  background-image: url("https://kwiaciarniaegzotyka.pl/wp-content/uploads/2018/10/kisspng-video-on-demand-retail-website-simple-no-png-5ab1349e1338a3.1123358815215627820787.png");
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: center;
+  background-size: contain;
+}
+
+.main-section__list__item__value__input-file {
+  display: none;
+}
+
+.main-section__list__item__value__label {
+  border: 1px solid #ccc;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 2rem;
+  padding: 6px 12px;
+  cursor: pointer;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.main-section__list__item__value__label:hover {
+  color: #fff;
+  background-color: #f58c93;
+}
+
+.main-section__list__item__value__label__icon {
+  margin-right: 1rem;
+}
+
 .main-section__list__item__value__status {
-  padding: 0.2rem 1rem;
+  padding: 0.6rem 0.6rem;
   border-radius: 0.5rem;
   color: #fff;
   background-color: red;
+  font-size: 1rem;
   cursor: pointer;
 }
 
