--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -2,7 +2,7 @@
   display: flex;
 
   &__title {
-    font-size: 1.3rem;
+    font-size: 2rem;
     font-weight: bold;
     line-height: 7.5rem;
     letter-spacing: 0.1rem;
@@ -18,26 +18,39 @@
       padding: 0 0rem 0 2rem;
 
       &__link {
-        font-size: 1rem;
-        text-decoration: none;
-        color: #999;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
 
-        &--button {
-          padding: 0.6rem 1.5rem 0.6rem 1.5rem;
-          border-radius: 0.5rem;
+        width: 10vmin;
+        height: 4vmin;
+        border-radius: 0.5rem;
+        text-transform: uppercase;
+
+        font-size: 1.1rem;
+        letter-spacing: 0.04rem;
+        text-decoration: none;
+        color: #6e6eef;
+
+        cursor: pointer;
+        transition: 0.2s;
+
+        &--add {
           background-color: #dbdbfb;
-          color: #6e6eef;
+
+          &:hover {
+            color: white;
+            background-color: green;
+          }
         }
 
         &--login {
-          padding: 0.6rem 1.5rem 0.6rem 1.5rem;
           box-shadow: inset 0px 0px 0px 2px #6e6eef;
-          border-radius: 0.5rem;
-          color: #6e6eef;
-        }
 
-        & i {
-          margin-right: 0.5rem;
+          &:hover {
+            color: white;
+            background-color: #6e6eef;
+          }
         }
       }
     }
