--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,7 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
+
 * {
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
-  font-family: "Open Sans", sans-serif;
 }
 
 input[type="number"]::-webkit-inner-spin-button {
@@ -13,6 +14,7 @@ input[type="number"]::-webkit-inner-spin-button {
   justify-content: center;
 
   width: 100vw;
+  font-size: 10px;
 }
 
 body {
