--- a/src/css/header.css
+++ b/src/css/header.css
@@ -34,11 +34,11 @@
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  width: 10vmin;
   height: 4vmin;
   border-radius: 0.5rem;
+  padding: 0 1.2rem;
   text-transform: uppercase;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   letter-spacing: 0.04rem;
   text-decoration: none;
   color: #6e6eef;
@@ -49,20 +49,29 @@
 
 .site-header__list__item__link--add {
   background-color: #dbdbfb;
+  border: none;
 }
 
 .site-header__list__item__link--add:hover {
   color: white;
-  background-color: green;
+  background-color: #6f8efa;
 }
 
 .site-header__list__item__link--login {
-  -webkit-box-shadow: inset 0px 0px 0px 2px #6e6eef;
-          box-shadow: inset 0px 0px 0px 2px #6e6eef;
+  background-color: transparent;
+  border: none;
+  padding: 0;
 }
 
 .site-header__list__item__link--login:hover {
-  color: white;
-  background-color: #6e6eef;
+  color: #f58c93;
+}
+
+.site-header__list__item__link__icon--add {
+  margin-right: 0.5rem;
+}
+
+.site-header__list__item__link__icon--login {
+  font-size: 2.2rem;
 }
 /*# sourceMappingURL=header.css.map */
