--- a/src/scss/sortSection.scss
+++ b/src/scss/sortSection.scss
@@ -1,11 +1,31 @@
 .sort-section {
   margin-top: 4vh;
-  padding: 1.7rem 2rem 1.7rem 2rem;
+  padding: 0 2rem;
   border-radius: 0.7rem;
   background-color: #fff;
 
+  &__button {
+    background-color: transparent;
+    padding: 0 1rem 0 0;
+    border: none;
+
+    font-size: 2.4rem;
+    line-height: 4.2rem;
+    color: #5858ba;
+
+    cursor: pointer;
+    transition: 0.4s;
+
+    &:hover {
+      transform: translateX(-0.5rem);
+      color: #6f8efa;
+    }
+  }
+
   &__list {
     display: flex;
+
+    width: 100%;
 
     &__item {
       flex: 1;
@@ -19,6 +39,7 @@
       &__button {
         text-decoration: none;
         font-size: 1.2rem;
+        line-height: 4.2rem;
       }
     }
   }
