--- a/src/scss/sortSection.scss
+++ b/src/scss/sortSection.scss
@@ -40,6 +40,8 @@
         text-decoration: none;
         font-size: 1.2rem;
         line-height: 4.2rem;
+
+        // cursor: pointer;
       }
     }
   }
