--- a/src/scss/filtersSection.scss
+++ b/src/scss/filtersSection.scss
@@ -54,6 +54,8 @@
           width: 80%;
           color: white;
           font-size: 1rem;
+
+          cursor: pointer;
         }
 
         &::after {
