--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -20,6 +20,7 @@ input[type="number"]::-webkit-inner-spin-button {
 body {
   display: flex;
   justify-content: center;
+  overflow-x: hidden;
 
   min-height: 100vh;
 
@@ -29,10 +30,31 @@ body {
 }
 
 .main-content {
+  // position: relative;
+
   display: flex;
   flex-direction: column;
 
   max-width: 1400px;
   padding: 0 2.8rem 2.8rem 2.8rem;
   flex-grow: 1;
+
+  &__img {
+    position: fixed;
+
+    top: 0;
+    bottom: 0;
+    left: 85%;
+
+    // background-color: transparent;
+    z-index: -1;
+
+    // max-width: 100%;
+    height: 100vh;
+
+    &--left {
+      left: auto;
+      right: 85%;
+    }
+  }
 }
