--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -30,8 +30,6 @@ body {
 }
 
 .main-content {
-  // position: relative;
-
   display: flex;
   flex-direction: column;
 
@@ -46,11 +44,10 @@ body {
     bottom: 0;
     left: 85%;
 
-    // background-color: transparent;
     z-index: -1;
 
-    // max-width: 100%;
     height: 100vh;
+    opacity: 0.4;
 
     &--left {
       left: auto;
