--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -46,11 +46,10 @@ body {
     bottom: 0;
     left: 85%;
 
-    // background-color: transparent;
     z-index: -1;
 
-    // max-width: 100%;
     height: 100vh;
+    opacity: 0.4;
 
     &--left {
       left: auto;
