--- a/src/css/sortSection.css
+++ b/src/css/sortSection.css
@@ -27,18 +27,32 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
+  height: 4.2rem;
 }
 
 .sort-section__list__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  text-align: center;
 }
 
 .sort-section__list__item:nth-child(1) {
-  text-align: left;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-flex: 0.5;
       -ms-flex: 0.5;
           flex: 0.5;
@@ -47,6 +61,7 @@
 .sort-section__list__item__button {
   text-decoration: none;
   font-size: 1.2rem;
-  line-height: 4.2rem;
+  width: auto;
+  cursor: pointer;
 }
 /*# sourceMappingURL=sortSection.css.map */
