--- a/src/scss/mainSection.scss
+++ b/src/scss/mainSection.scss
@@ -48,6 +48,10 @@
     }
 
     &__desc-container {
+      // display: flex;
+      // align-items: center;
+      flex-direction: column;
+
       padding-top: 2rem;
       font-size: 1.5rem;
 
@@ -56,7 +60,20 @@
       }
 
       &__description {
+        resize: none;
+        overflow: hidden;
         font-size: 1.2rem;
+        height: 13rem;
+        width: 100%;
+      }
+
+      &__submit {
+        padding: 0.3rem 0;
+        width: 100%;
+        background-color: #6f8efa;
+        border-radius: 0.5rem;
+        color: #fff;
+        cursor: pointer;
       }
     }
   }
