--- a/src/scss/sortSection.scss
+++ b/src/scss/sortSection.scss
@@ -24,24 +24,32 @@
 
   &__list {
     display: flex;
+    align-items: center;
+
+    width: 100%;
+    height: 4.2rem;
 
     width: 100%;
 
     &__item {
+      display: flex;
+      justify-content: center;
+
       flex: 1;
-      text-align: center;
 
       &:nth-child(1) {
-        text-align: left;
+        display: flex;
+        justify-content: flex-start;
+
         flex: 0.5;
       }
 
       &__button {
         text-decoration: none;
         font-size: 1.2rem;
-        line-height: 4.2rem;
+        width: auto;
 
-        // cursor: pointer;
+        cursor: pointer;
       }
     }
   }
