--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -22,7 +22,7 @@
         align-items: center;
         justify-content: space-around;
 
-        height: 4vmin;
+        height: 3rem;
         border-radius: 0.5rem;
         padding: 0 1.2rem;
 
