--- a/src/css/filtersSection.css
+++ b/src/css/filtersSection.css
@@ -48,7 +48,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0.8rem;
+  padding: 0 0.8rem;
   border-radius: 0.5rem;
   color: #fff;
 }
@@ -64,6 +64,8 @@
   width: 80%;
   color: white;
   font-size: 1rem;
+  line-height: 2.8rem;
+  height: 2.8rem;
   cursor: pointer;
 }
 
