--- a/src/css/index.css
+++ b/src/css/index.css
@@ -54,7 +54,8 @@ body {
   bottom: 0;
   left: 85%;
   z-index: -1;
-  height: 100vh;
+  min-height: 1000px;
+  height: 55vmax;
   opacity: 0.4;
 }
 
