--- a/src/css/sortSection.css
+++ b/src/css/sortSection.css
@@ -45,6 +45,16 @@
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  user-select: none;
+  /* supported by Chrome and Opera */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
 }
 
 .sort-section__list__item:nth-child(1) {
