--- a/src/scss/filtersSection.scss
+++ b/src/scss/filtersSection.scss
@@ -37,7 +37,7 @@
         justify-content: space-between;
         align-items: center;
 
-        padding: 0.8rem;
+        padding: 0 0.8rem;
         border-radius: 0.5rem;
 
         color: #fff;
@@ -54,6 +54,8 @@
           width: 80%;
           color: white;
           font-size: 1rem;
+          line-height: 2.8rem;
+          height: 2.8rem;
 
           cursor: pointer;
         }
