--- a/src/scss/sortSection.scss
+++ b/src/scss/sortSection.scss
@@ -36,6 +36,11 @@
       justify-content: center;
 
       flex: 1;
+      user-select: none; /* supported by Chrome and Opera */
+      -webkit-user-select: none; /* Safari */
+      -khtml-user-select: none; /* Konqueror HTML */
+      -moz-user-select: none; /* Firefox */
+      -ms-user-select: none; /* Internet Explorer/Edge */
 
       &:nth-child(1) {
         display: flex;
