--- a/src/css/filtersSection.css
+++ b/src/css/filtersSection.css
@@ -39,6 +39,7 @@
 }
 
 .filters-section__filters-list__item__value {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -66,6 +67,7 @@
   font-size: 1rem;
   line-height: 2.8rem;
   height: 2.8rem;
+  -moz-appearance: textfield;
   cursor: pointer;
 }
 
@@ -89,6 +91,7 @@
 .filters-section__filters-list__item:nth-of-type(3) .filters-section__filters-list__item__value__input {
   width: 100%;
   border: none;
+  -moz-appearance: none;
 }
 
 .filters-section__filters-list__item:nth-of-type(3) .filters-section__filters-list__item__value__input option {
