--- a/src/css/index.css
+++ b/src/css/index.css
@@ -33,6 +33,22 @@ body {
   background-color: #f5f5fd;
 }
 
+body::before {
+  content: " ";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  min-width: 2100px;
+  height: 100%;
+  opacity: 0.4;
+  z-index: -1;
+  background-image: url(../img/money-transparent-small.png), url(../img/money-transparent-small.png);
+  background-position: -70% 0, 170% 0;
+  background-repeat: no-repeat, no-repeat;
+}
+
 .main-content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -48,19 +64,44 @@ body {
           flex-grow: 1;
 }
 
-.main-content__img {
+.expense-wrapper {
   position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 85%;
-  z-index: -1;
-  min-height: 1000px;
-  height: 55vmax;
-  opacity: 0.4;
+  top: 10vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-item-align: center;
+      align-self: center;
+  width: 1400px;
+  z-index: 99;
 }
 
-.main-content__img--left {
-  left: auto;
-  right: 85%;
+.expense-wrapper__button {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 5rem;
+  height: 5rem;
+  background-color: transparent;
+  padding: 0 1rem 0 0;
+  border: none;
+  font-size: 2.4rem;
+  line-height: 4.2rem;
+  color: #5858ba;
+  cursor: pointer;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  z-index: 5;
+}
+
+.expense-wrapper__button:hover {
+  -webkit-transform: translateX(-0.5rem);
+          transform: translateX(-0.5rem);
+  color: #6f8efa;
 }
 /*# sourceMappingURL=index.css.map */
