--- a/src/scss/sortSection.scss
+++ b/src/scss/sortSection.scss
@@ -1,26 +1,8 @@
 .sort-section {
-  margin-top: 4vh;
+  margin: 4vh 0;
   padding: 0 2rem;
   border-radius: 0.7rem;
   background-color: #fff;
-
-  &__button {
-    background-color: transparent;
-    padding: 0 1rem 0 0;
-    border: none;
-
-    font-size: 2.4rem;
-    line-height: 4.2rem;
-    color: #5858ba;
-
-    cursor: pointer;
-    transition: 0.4s;
-
-    &:hover {
-      transform: translateX(-0.5rem);
-      color: #6f8efa;
-    }
-  }
 
   &__list {
     display: flex;
@@ -53,7 +35,7 @@
         padding-left: 0;
       }
 
-      &:nth-last-child(2) &__button {
+      &:is(&:nth-last-child(2), &:nth-child(1)) &__button {
         cursor: default;
       }
 
