--- a/src/css/filtersSection.css
+++ b/src/css/filtersSection.css
@@ -39,6 +39,7 @@
 }
 
 .filters-section__filters-list__item__value {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -48,7 +49,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0.8rem;
+  padding: 0 0.8rem;
   border-radius: 0.5rem;
   color: #fff;
 }
@@ -64,6 +65,9 @@
   width: 80%;
   color: white;
   font-size: 1rem;
+  line-height: 2.8rem;
+  height: 2.8rem;
+  -moz-appearance: textfield;
   cursor: pointer;
 }
 
@@ -87,6 +91,7 @@
 .filters-section__filters-list__item:nth-of-type(3) .filters-section__filters-list__item__value__input {
   width: 100%;
   border: none;
+  -moz-appearance: none;
 }
 
 .filters-section__filters-list__item:nth-of-type(3) .filters-section__filters-list__item__value__input option {
