--- a/src/css/mainSection.css
+++ b/src/css/mainSection.css
@@ -3,7 +3,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 4vh;
+  width: 100%;
   border-radius: 0.7rem;
   background-color: #fff;
 }
@@ -19,6 +19,7 @@
   background-position-x: center;
   background-position-y: center;
   background-size: contain;
+  margin: 2rem;
 }
 
 .main-section__info {
@@ -102,6 +103,11 @@
 
 .main-section__list__item:nth-child(even) {
   background-color: #f2f2f2;
+}
+
+.main-section__list__item:nth-child(even) .main-section__list__item__value--image {
+  -webkit-box-shadow: inset 0 0 2px #000;
+          box-shadow: inset 0 0 2px #000;
 }
 
 .main-section__list__item__value {
@@ -211,16 +217,12 @@
   background-position-x: center;
   background-position-y: center;
   background-size: contain;
+  -webkit-box-shadow: inset 0 0 6px #000;
+          box-shadow: inset 0 0 6px #000;
   -webkit-transition: 0.3s;
   transition: 0.3s;
   cursor: pointer;
   z-index: 2;
-}
-
-.main-section__list__item__value--image:hover {
-  -webkit-transform: scale(2);
-          transform: scale(2);
-  z-index: 3;
 }
 
 .main-section__list__item__value__image {
@@ -280,6 +282,7 @@
   background-color: red;
   font-size: 1rem;
   cursor: pointer;
+  -moz-appearance: none;
 }
 
 .main-section__list__item__value__status--draft {
