--- a/src/css/sortSection.css
+++ b/src/css/sortSection.css
@@ -1,37 +1,17 @@
 .sort-section {
-  margin-top: 4vh;
+  margin: 4vh 0;
   padding: 0 2rem;
   border-radius: 0.7rem;
   background-color: #fff;
-}
-
-.sort-section__button {
-  background-color: transparent;
-  padding: 0 1rem 0 0;
-  border: none;
-  font-size: 2.4rem;
-  line-height: 4.2rem;
-  color: #5858ba;
-  cursor: pointer;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.sort-section__button:hover {
-  -webkit-transform: translateX(-0.5rem);
-          transform: translateX(-0.5rem);
-  color: #6f8efa;
 }
 
 .sort-section__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   width: 100%;
   height: 4.2rem;
+  width: 100%;
 }
 
 .sort-section__list__item {
@@ -44,6 +24,16 @@
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  user-select: none;
+  /* supported by Chrome and Opera */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
 }
 
 .sort-section__list__item:nth-child(1) {
@@ -58,10 +48,32 @@
           flex: 0.5;
 }
 
+.sort-section__list__item:nth-child(1) .sort-section__list__item__button {
+  padding-left: 0;
+}
+
+.sort-section__list__item:is(.sort-section__list__item:nth-last-child(2), .sort-section__list__item:nth-child(1)) .sort-section__list__item__button {
+  cursor: default;
+}
+
 .sort-section__list__item__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-decoration: none;
   font-size: 1.2rem;
   width: auto;
+  padding: 0 1rem;
   cursor: pointer;
+}
+
+.sort-section__list__item__button i {
+  padding-left: 0.5rem;
 }
 /*# sourceMappingURL=sortSection.css.map */
