--- a/src/scss/filtersSection.scss
+++ b/src/scss/filtersSection.scss
@@ -33,11 +33,12 @@
       }
 
       &__value {
+        position: relative;
         display: flex;
         justify-content: space-between;
         align-items: center;
 
-        padding: 0.8rem;
+        padding: 0 0.8rem;
         border-radius: 0.5rem;
 
         color: #fff;
@@ -54,6 +55,10 @@
           width: 80%;
           color: white;
           font-size: 1rem;
+          line-height: 2.8rem;
+          height: 2.8rem;
+          // -webkit-appearance: none;
+          -moz-appearance: textfield;
 
           cursor: pointer;
         }
@@ -86,6 +91,8 @@
         &__input {
           width: 100%;
           border: none;
+          // -webkit-appearance: none;
+          -moz-appearance: none;
 
           & option {
             background-color: #f58c93;
