--- a/src/scss/mainSection.scss
+++ b/src/scss/mainSection.scss
@@ -1,7 +1,7 @@
 .main-section {
   display: flex;
 
-  margin-top: 4vh;
+  width: 100%;
   border-radius: 0.7rem;
   background-color: #fff;
 
@@ -9,13 +9,12 @@
     flex: 1;
 
     align-self: stretch;
-    // background-image: url("https://kwiaciarniaegzotyka.pl/wp-content/uploads/2018/10/kisspng-video-on-demand-retail-website-simple-no-png-5ab1349e1338a3.1123358815215627820787.png");
     background-repeat: no-repeat;
     background-position-x: center;
     background-position-y: center;
-    // background-attachment: fixed;
     background-size: contain;
-    // width: 500;
+
+    margin: 2rem;
   }
 
   &__info {
@@ -96,6 +95,14 @@
 
       &:nth-child(even) {
         background-color: #f2f2f2;
+      }
+
+      &:nth-child(even) &__value--image {
+        // background-color: #f2f2f2;
+        box-shadow: inset 0 0 2px #000;
+        // border-left: solid 3px #000;
+        // border-right: solid 3px #000;
+        // border: solid 3px #000;
       }
 
       &__value {
@@ -198,15 +205,16 @@
           background-position-y: center;
           // background-attachment: fixed;
           background-size: contain;
+          box-shadow: inset 0 0 6px #000;
 
           transition: 0.3s;
           cursor: pointer;
           z-index: 2;
 
-          &:hover {
-            transform: scale(2);
-            z-index: 3;
-          }
+          // &:hover {
+          //   transform: scale(2);
+          //   z-index: 3;
+          // }
         }
 
         &__image {
@@ -265,6 +273,7 @@
           font-size: 1rem;
 
           cursor: pointer;
+          -moz-appearance: none;
 
           &--draft {
             background-color: #f58c93;
