--- a/src/scss/sortSection.scss
+++ b/src/scss/sortSection.scss
@@ -1,30 +1,12 @@
 .sort-section {
-  margin-top: 4vh;
+  margin: 4vh 0;
   padding: 0 2rem;
   border-radius: 0.7rem;
   background-color: #fff;
 
-  &__button {
-    background-color: transparent;
-    padding: 0 1rem 0 0;
-    border: none;
-
-    font-size: 2.4rem;
-    line-height: 4.2rem;
-    color: #5858ba;
-
-    cursor: pointer;
-    transition: 0.4s;
-
-    &:hover {
-      transform: translateX(-0.5rem);
-      color: #6f8efa;
-    }
-  }
-
   &__list {
     display: flex;
-    align-items: center;
+    // align-items: stretch;
 
     width: 100%;
     height: 4.2rem;
@@ -34,22 +16,44 @@
     &__item {
       display: flex;
       justify-content: center;
+      // align-items: stretch;
 
       flex: 1;
+      user-select: none; /* supported by Chrome and Opera */
+      -webkit-user-select: none; /* Safari */
+      -khtml-user-select: none; /* Konqueror HTML */
+      -moz-user-select: none; /* Firefox */
+      -ms-user-select: none; /* Internet Explorer/Edge */
 
       &:nth-child(1) {
         display: flex;
         justify-content: flex-start;
-
         flex: 0.5;
       }
 
+      &:nth-child(1) &__button {
+        padding-left: 0;
+      }
+
+      &:is(&:nth-last-child(2), &:nth-child(1)) &__button {
+        cursor: default;
+      }
+
       &__button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
         text-decoration: none;
         font-size: 1.2rem;
         width: auto;
+        padding: 0 1rem;
 
         cursor: pointer;
+
+        & i {
+          padding-left: 0.5rem;
+        }
       }
     }
   }
